--- a/index.html
+++ b/index.html
@@ -6,14 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="main.js" type="text/javascript"></script>
     <script type="text/javascript">
-      var Module = {
-        onRuntimeInitialized: function() {
-          console.log('Module Loaded ', Module);
-          render();
-        }    
-      }
+      var open_file = function(e) {
+        const file_reader = new FileReader();
+        file_reader.onload = (event) => {
+          const uint8Arr = new Uint8Array(event.target.result);
+          const num_bytes = uint8Arr.length * uint8Arr.BYTES_PER_ELEMENT;
+          const data_ptr = Module._malloc(num_bytes);
+          const data_on_heap = new Uint8Array(Module.HEAPU8.buffer, data_ptr, num_bytes);
+          data_on_heap.set(uint8Arr);
+          const res = Module.ccall('load_file', 'number', ['number', 'number'], [data_on_heap.byteOffset, uint8Arr.length]);
+          Module._free(data_ptr);
+        };
+        file_reader.readAsArrayBuffer(e.target.files[0]);
+      };
     </script>
-    <script src="file_functions_wasm.js" type="text/javascript"></script>
+    <script src="test.js" type="text/javascript"></script>
     <title>Affinity Insights</title>
 </head>
 
